# Maths_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: scoreboard.txt
src/: Object.cpp  Object.hpp  Rand.cpp  Rand.hpp  draw.cpp  draw.hpp  game.cpp  game.hpp  gaming.cpp  gaming.hpp  main.cpp  rand.cpp  rand.hpp  score.cpp  score.hpp  stats.cpp  stats.hpp
src/Game/: End_State.cpp  Game.hpp  Menu_State.cpp  Playing_State.cpp  Rules_State.cpp  Scoreboard_State.cpp
src/include/: random.hpp
